syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "Identity.proto";
import "Messages/NaturalPerson.proto";
import "Messages/IdentificationDocument.proto";
import "Messages/CustomerIdentification.proto";
import "GrpcAddress.proto";
import "Messages/Contacts.proto";

message GetCustomerDetailRequest {
	cis.types.Identity Identity = 1;

	bool ForceKbCustomerLoad = 2; //Loads a KB customer if the requested identity is MP.
}